--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -16,7 +16,6 @@ services:
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
-      - redoc:/app/api/docs/
     depends_on:
       - db
     links:
@@ -34,11 +33,10 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx_local.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - static_value:/var/html/static/
       - media_value:/var/html/media/
-      - redoc:/usr/share/nginx/html/api/docs/
     depends_on:
       - backend
     restart: always
@@ -46,4 +44,3 @@ volumes:
   static_value:
   media_value:
   postgres_data:
-  redoc:
