--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -39,7 +39,7 @@ jobs:
         with:
             context: ./frontend
             push: true
-            tags: chumanastasia/foodgram_frontend:v1.01.2023
+            tags: chumanastasia/foodgram_frontend:v3.01.2023
   build_push_backend_dockerhub:
     runs-on: ubuntu-latest
     needs: tests
@@ -58,7 +58,7 @@ jobs:
         with:
           context: ./backend
           push: true
-          tags: chumanastasia/foodgram_backend:v1.01.2023
+          tags: chumanastasia/foodgram_backend:v3.01.2023
   deploy:
     runs-on: ubuntu-latest
     needs: [build_push_frontend_dockerhub, build_push_backend_dockerhub]
@@ -81,6 +81,7 @@ jobs:
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
+            echo DEBUG=${{ secrets.DEBUG }} >> .env
             sudo docker-compose up -d --build
   send_message:
     runs-on: ubuntu-latest
